# TCPByteStream

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  test.c
benches/: Makefile  benches.c  benches.rs  c_benchmark
src/: lib.rs  main.rs  parser.rs  tests.rs  util.rs
tests/: Makefile  c_benchmark  test.c  tests.rs  utiltests.rs
