[package]
name = "tcp_byte_stream"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Scott Cooper <scott@sacooper.io>"]
description = "Implementation of TCP, abstracted to reading byte stream"
keywords = ["tcp", "networking"]
readme = "README.md"

[dependencies]
bitflags = "~0.3.2"
pcap = { version = "~0.5.0", optional = true}

[dependencies.nom]
version = "*"
features =["core"]


[features]
core=[]
use_pcap=["pcap"]
